# ARLO

./: .env.example  .gitignore  ARLO.spec  ArcRaidersHelper.spec  README.md  build.py  flake.nix  items.csv  items.db  makefile  pyproject.toml  update_db.py
.github/workflows/: update-db.yml
docs/: BUILD.md  ITEMS.md
src/arc_helper/: __init__.py  calibrate.py  config.py  database.py  logging_config.py  main.py  ocr.py  overlay.py  resolution_profiles.py  resolutions.json
